fixed broken UI for mobile

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,43 @@
+body, html
+  padding: 0
+  margin: 0
+
+*
+  font-family: 'Lato', Helvetica, sans-serif
+  line-height: 1.5
+
+h1
+  font-size: 2.5rem
+
+h2
+  font-size: 2rem
+
+h3
+  font-size: 1.375rem
+
+h4
+  font-size: 1.125rem
+
+h5
+  font-size: 1rem
+
+h6
+  font-size: 0.875rem
+
+p
+  font-size: 1.125rem
+  font-weight: 200
+  line-height: 1.8
+
+.grid
+  padding: 20px 30px
+  margin-top: 25px
+  display: grid
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr))
+  grid-column-gap: 20px
+  grid-row-gap: 20px
+  max-width: 100%
+
 .float-btn
   position: fixed
   border-radius: 50%
@@ -44,3 +84,10 @@
   position: absolute
   top: 30%
   left: 0
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait)
+  .grid
+    margin: 0!important
+    padding: 0
+    grid-row-gap: 0px
+    grid-template-columns: auto
